<resources>
    <string name="app_name">Wen</string>
    <string name="user_name">User Name</string>
    <string name="empty_fields">There cannot be empty fields</string>
    <string name="unable_to_sign_out">Unable to sign out</string>
    <string name="sure_">Sure?</string>
    <string name="is_not_available">is not available</string>
    <string name="incoming_call">Incoming call</string>
    <string name="incoming_videocall">Incoming video call</string>
    <string name="outgoing_videocall">Outgoing video call</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="battery_optimization_enabled">Battery optimization is enabled. It can interrupt services running in the background.</string>
    <string name="warning">Warning</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="disable">Disable</string>
    <string name="we_will_send_you_a_code_to_this_mobile_phone">We will send you an SMS to verify your phone number</string>
    <string name="send_code">Send code</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="enter_the_code_sent_to">Enter the code sent to</string>
    <string name="haven_t_received_any_sms">Haven\'t received any SMS?</string>
    <string name="resend_it">Resend it</string>
    <string name="profile_info">Profile info</string>
    <string name="verify">Verify</string>
    <string name="enter_phone_number">Enter a phone number</string>
    <string name="verification_code_not_valid">The verification code is not valid</string>
    <string name="code_sent">Code sent</string>
    <string name="would_you_like_to_edit_the_number">Is this OK, or would you like to edit the number?</string>
    <string name="we_will_be_verifying">We will be verifying the phone number:</string>
    <string name="edit">Edit</string>
    <string name="is_not_a_valid_phone_number_for">is not a valid phone number for</string>
    <string name="spain">Spain</string>
    <string name="please_provide_your_name_and_an_optional_profile_photo">Please, provide, at least, your user name. Keep in mind that this data will be public.</string>
    <string name="next">Next</string>
    <string name="uploading">Uploading…</string>
    <string name="select_an_image">Please, select an image</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="unable_to_send_token">Unable to send token</string>
    <string name="no_users_available">No users available</string>
    <!--INTRO-->
    <string name="app_description">A free, fast and intuitive message app</string>
    <string name="fast">Fast</string>
    <string name="fast_description">Real time message. No waits.</string>
    <string name="free">Free</string>
    <string name="free_description">No annoying adds. No subscriptions. No selling of information.</string>
    <string name="secure">Secure</string>
    <string name="secure_description">No one except you will be able to access your personal data</string>
    <string name="cloud_based">Cloud based</string>
    <string name="cloud_description">Wen doesn\'t store your media and messages on your local device. No need of annoying backups at 2 a.m.</string>
    <string name="get_started">Get started</string>
    <string name="skip">Skip</string>
    <!-- TOOLBAR ITEMS -->
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <!-- SETTINGS OPTIONS -->
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <!-- -->
    <string name="data_updated_successfully">Data updated successfully</string>
    <string name="calls">Calls</string>
    <string name="call">Call</string>
    <string name="cancelled">Cancelled</string>
    <string name="rejected">Rejected</string>
    <string name="about">About</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="username_already_exists">Already exists</string>
    <string name="user_name_invalid">Not valid</string>
    <string name="available">Available</string>
    <string name="profile_image_will_be_removed">Your profile image will be removed</string>
    <string name="cannot_edit_the_number">Sorry, but you cannot edit the phone number</string>
    <string name="last_seen">Last seen</string>
    <string name="everyone">Everyone</string>
    <string name="my_contacts">My contacts</string>
    <string name="nobody">Nobody</string>
    <string name="some_changes_have_been_made">Some changes have been made. Do you want to save them?</string>
    <string name="only_letter_or_numbers">Only letters or numbers</string>
    <string name="message">Message</string>
    <string name="last_seen_yesterday_at">last seen yesterday at</string>
    <string name="at">at</string>
    <string name="last_seen_today_at">last seen at</string>
    <string name="video_call">Video call</string>
    <string name="group">Group</string>
    <string name="not_available">Not available</string>
    <string name="channel_chat_description">We will send you the messages notifications through this channel</string>
    <string name="channel_call_description">We will send you the call notifications through this channel</string>
    <string name="search">Search</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <!-- Notifications activity -->
    <string name="private_chats">Private chats</string>
    <string name="notification_tone">Notification tone</string>
    <string name="vibrate">Vibrate</string>
    <string name="popup_notification">Popup notification</string>
    <string name="ringtone">Ringtone</string>
    <string name="no_popup">No popup</string>
    <string name="always_show_popup">Always show popup</string>
    <string name="display_notifications">Display notifications</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="general">General</string>
    <string name="led_color">LED Color</string>
    <string name="light_summary">If the screen is off and you receive a notification, the LED of the device will blink in this color</string>
    <string name="info_notifications">Note that the preferences from the private chats won\'t work on Android 8.0 or above. Click here to go to the app notifications settings of the system.</string>
    <string name="messages">Messages</string>
    <string name="users">Users</string>
    <string name="welcoming_message_chat"><b>Welcome to Wen</b>\n\nStart messaging by searching for a user by tapping on the search button in the upper right corner or by tapping in the floating button to chat with someone from your contacts list.</string>
    <string name="welcoming_message_call"><b>Welcome to Wen</b>\n\nStart calling by searching for a user by tapping on the search button in the upper right corner or by tapping in the floating button to call someone from your contacts list.</string>
    <string name="group_disabled_tip">Select the users you want to call by holding them down</string>
    <string name="add_contact">Add contact</string>
    <string name="delete_contact">Delete contact</string>
    <string name="username_too_short">User name has to have 4 characters at least</string>
    <string name="no_contacts">You don\'t have any contact yet. You can find a user using the search item of the main page!</string>
    <string name="phone_and_warning">Phone (only you can see the number)</string>
    <string name="no_messages_yet">No messages here yet…  Send him a greeting!</string>
    <string name="search_a_message">Search a message by entering the text in the bar above</string>
    <string name="search_a_user">Search a user name by entering the text in the bar above</string>
    <string name="chats">Chats</string>
</resources>