<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SendOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_otp_send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sms_verification"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:fontFamily="@font/ubuntu_bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/we_will_send_you_a_code_to_this_mobile_phone"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:text="@string/enter_phone_number"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+34"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold" />

            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:layout_marginStart="8dp"
                android:hint="678 123 456"
                android:textColorHint="@color/colorHintText"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="@color/colorDivider" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sendCodeBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/background_button_send_otp"
                android:text="@string/send_code"
                android:textColor="@color/colorTextIcon"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/sendCodePB"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>