<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.OnboardingActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/screenVP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nextBT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"
        android:id="@+id/skipTV"
        android:foreground="@drawable/ripple"
        android:fontFamily="@font/ubuntu_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBackground"
        android:foreground="@drawable/ripple"
        android:drawableTint="@color/colorPrimary"
        android:drawableEnd="@drawable/ic_next"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/next"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/getStartedBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/get_started"
        android:textColor="@color/colorTextIcon"
        android:visibility="invisible"
        android:foreground="@drawable/ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:tabIndicator="@android:color/transparent"
        app:tabBackground="@drawable/indicator_selector"
        app:layout_constraintBottom_toBottomOf="@id/nextBT"
        app:layout_constraintTop_toTopOf="@id/nextBT"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>