<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_otp_received" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="OTP Verification"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:fontFamily="@font/ubuntu_bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/enter_the_code_sent_to"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/phoneNumberTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:text="123456789"
            android:gravity="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            android:fontFamily="@font/ubuntu_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCode1ET"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:fontFamily="@font/ubuntu_bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode2ET"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:fontFamily="@font/ubuntu_bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode3ET"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:fontFamily="@font/ubuntu_bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode4ET"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:fontFamily="@font/ubuntu_bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode5ET"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:fontFamily="@font/ubuntu_bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode6ET"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:fontFamily="@font/ubuntu_bold"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/haven_t_received_any_sms"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/resendCodeBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/resend_it"
                android:textColor="@color/colorAccent"
                android:textSize="15sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/verifyCodeBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_button_send_otp"
                android:text="@string/verify"
                android:textColor="@color/colorTextIcon"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/verifyCodePB"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>